inserted devise config

--- a/odin-facebook/Gemfile
+++ b/odin-facebook/Gemfile
@@ -6,7 +6,7 @@ ruby '2.6.3'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.0.2', '>= 6.0.2.1'
 # Use postgresql as the database for Active Record
-gem 'pg', '~> 1.2', '>= 1.2.1'
+gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
 # Use SCSS for stylesheets
@@ -21,8 +21,8 @@ gem 'jbuilder', '~> 2.7'
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-gem 'devise', '1.1.rc0'
-gem 'omniauth-facebook'
+gem 'devise', '~> 4.7', '>= 4.7.1'  
+gem 'omniauth-facebook', '~> 5.0'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
